--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,15 @@
 .download-button a svg {
   margin-right: 5px;
 }
+
+@media screen and (max-width: 500px) {
+  .cursor {
+    display: none !important;
+  }
+  h2 {
+    font-size: 1.3rem;
+  }
+  h3 {
+    font-size: 1.1rem;
+  }
+}
