--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
   padding: 0;
   font-family: "Nunito Sans", sans-serif;
   cursor: none;
+  scroll-behavior: smooth !important;
 }
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
