--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@
 html {
   scroll-behavior: smooth !important;
 }
+@media screen and (max-width: 592px) {
+  .ml0res {
+    margin-left: 0px !important;
+  }
+}
